# azure-iot-rs

./: .gitmodules  Cargo.toml  README.md
lib/: Cargo.toml  deviceclient.rs
lib/examples/: basic.rs
lib/src/: config.rs  deviceclient.rs  error.rs  hub.rs  lib.rs  message.rs  module.rs  moduleclient.rs  storage.rs  structs.rs  transport.rs
src/: lib.rs  message.rs  module.rs
sys/: Cargo.toml  build.rs
sys/src/: lib.rs
