[package]
name = "azure-iot-rs"
description = "Rust wrappers for Azure IOT C SDK"
version = "0.1.0"
authors = ["Prakash <duggaraju@gmail.com>"]
edition = "2018"
repository = "https://github.com/duggaraju/azure-iot-rs"
license = "MIT"
keywords = [ "azure", "iot", "edge", "device" , "SDK" ]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-iot-rs-sys = "0.1.6"
log="0.4.11"
serde_json = "1.0.58"

[build-dependencies]
