[package]
name = "azure-iot-rs"
description = "Rust wrappers for Azure IOT C SDK"
version = "0.3.0"
authors = ["Prakash <duggaraju@gmail.com>"]
edition = "2024"
repository = "https://github.com/duggaraju/azure-iot-rs"
license = "MIT"
keywords = [ "azure", "iot", "edge", "device" , "SDK" ]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-iot-rs-sys = { version = "^0.2.1" }
log="0.4.26"
serde_json = "1.0.140"

[build-dependencies]
