[package]
name = "azure-iot-rs"
description = "Rust wrappers for Azure IOT C SDK"
version = "0.7.0"
authors = ["Prakash <duggaraju@gmail.com>"]
edition = "2024"
repository = "https://github.com/duggaraju/azure-iot-rs/"
license = "MIT"
keywords = [ "azure", "iot", "edge", "device" , "SDK" ]
categories = ["api-bindings"]

[dependencies]
azure-iot-rs-sys = { version = "^0.7.0", path = "../sys" }
futures = "0.3.31"
log = "0.4.28"
serde_json = "1.0.145"
thiserror = "2.0.18"

[build-dependencies]

[features]
default = [ "http", "amqp", "mqtt" ]
http = ["azure-iot-rs-sys/http"]
mqtt = ["azure-iot-rs-sys/mqtt"]
amqp = ["azure-iot-rs-sys/amqp"]

[[bin]]
name = "basic"
path = "examples/basic.rs"
