[package]
name = "azure-iot-rs"
description = "Rust wrappers for Azure IOT C SDK"
version.workspace = true
authors = ["Prakash <duggaraju@gmail.com>"]
edition = "2024"
repository = "https://github.com/duggaraju/azure-iot-rs/"
license = "MIT"
keywords = [ "azure", "iot", "edge", "device" , "SDK" ]
categories = ["api-bindings"]

[dependencies]
azure-iot-rs-sys.workspace = true
futures = "0.3.32"
log = "0.4.29"
serde_json = "1.0.149"
thiserror = "2.0.18"

[build-dependencies]

[features]
default = [ "http", "amqp", "mqtt" ]
http = ["azure-iot-rs-sys/http"]
mqtt = ["azure-iot-rs-sys/mqtt"]
amqp = ["azure-iot-rs-sys/amqp"]

[[bin]]
name = "basic"
path = "examples/basic.rs"
