[package]
name = "azure-iot-rs-sys"
description = "Rust bindings for Azure IOT C SDK"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "build.rs"
repository = "https://github.com/duggaraju/azure-iothub-rs"
license = "MIT"
keywords = [ "azure", "IoT",  "edge", "device" , "SDK" ]
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "amqp", "mqtt", "prov_client" ]
http = []
mqtt = []
amqp = []
prov_client = ["http"]

[dependencies]

[build-dependencies]
bindgen="0.72.1"
cmake = "0.1.58"
pkg-config = "0.3.33"
